<resources>
    <string name="app_name">EcoLight</string>
    <string name="controle_seu_gasto_de_energia">Controle seu gasto de energia</string>
    <string name="registre_seus_consumos_e_tenha_um_maior_controle_das_suas_contas">Registre seus consumos e tenha um maior controle das suas contas</string>
    <string name="iniciar">Iniciar</string>
    <string name="Login">Login</string>
    <string name="seja_bem_vindo">Seja bem vindo!</string>
    <string name="fa_a_login_na_sua_conta">Faça login na sua conta</string>
    <string name="endere_o_de_email">Endereço de Email</string>
    <string name="senha">Senha</string>
    <string name="nao_tem_uma_conta">Não tem uma conta?</string>
    <string name="registre_se_ja">Registre-se já!</string>
    <string name="back_button_description">botão para voltar a tela anterior</string>
    <string name="registrar">Registrar</string>
    <string name="lembrar_de_mim">Lembrar de mim</string>
    <string name="ol_o_que_deseja_fazer_agora">Olá! O que deseja fazer agora?</string>
    <string name="meta_de_consumo_mensal">Meta de consumo mensal:</string>
    <string name="salvar">Salvar</string>
    <string name="categoria">Categoria</string>
    <string name="tempo_utilizado_em_minutos">Tempo utilizado (em minutos)</string>
    <string name="nome_do_dispositivo">Nome do dispositivo</string>
    <string name="usuario_nao_encontrado">Usuário não encontrado</string>
    <string name="registro_erro">Erro ao registrar</string>
    <string name="registro_sucesso">Sucesso ao registrar</string>
    <string name="senhas_nao_coincidem">As senhas não coincidem</string>
    <string name="preencha_todos_campos">Por favor, preencha todos os campos</string>
    <string name="potencia">Potência</string>
    <string name="registrar_consumo">Registrar Consumo</string>
    <string name="editar_consumo">Editar Consumo</string>
    <string name="api_registro_sucesso">Sucesso ao registrar na API</string>
</resources>